--- a/platform/openmote-cc2538/Makefile.openmote-cc2538
+++ b/platform/openmote-cc2538/Makefile.openmote-cc2538
@@ -1,12 +1,7 @@
+# openmote-cc2538 platform makefile
+
 ifndef CONTIKI
   $(error CONTIKI not defined! You must specify where CONTIKI resides!)
-endif
-
-PYTHON = python
-BSL_FLAGS += -e -w -v
-
-ifdef PORT
-  BSL_FLAGS += -p $(PORT)
 endif
 
 ### Configure the build for the board and pull in board-specific sources
@@ -14,9 +9,9 @@ CONTIKI_TARGET_DIRS += . dev
 PLATFORM_ROOT_DIR = $(CONTIKI)/platform/$(TARGET)
 
 ### Include
-CONTIKI_TARGET_SOURCEFILES += contiki-main.c board.c antenna.c
+CONTIKI_TARGET_SOURCEFILES += contiki-main.c board.c
 CONTIKI_TARGET_SOURCEFILES += leds-arch.c button-sensor.c smartrf-sensors.c
-CONTIKI_TARGET_SOURCEFILES += adxl346.c max44009.c sht21.c tps62730.c
+CONTIKI_TARGET_SOURCEFILES += antenna.c adxl346.c max44009.c sht21.c tps62730.c
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
@@ -33,7 +28,14 @@ include $(CONTIKI_CPU)/Makefile.cc2538
 
 MODULES += core/net core/net/mac \
            core/net/mac/contikimac \
-           core/net/llsec core/net/llsec/noncoresec dev/cc1200
+           core/net/llsec core/net/llsec/noncoresec
+
+PYTHON = python
+BSL_FLAGS += -e -w --bootloader-invert-lines -b 115200 -v
+
+ifdef PORT
+  BSL_FLAGS += -p $(PORT)
+endif
 
 BSL = $(CONTIKI)/tools/cc2538-bsl/cc2538-bsl.py
 
@@ -45,18 +47,4 @@ else
 	                               grep -Ev 'LOAD|\-\-' | awk '{print "0x" $$5}' | \
 	                               sort -g | head -1))
 	$(PYTHON) $(BSL) $(BSL_FLAGS) $(BSL_ADDRESS_ARG) $<
-endif
-
-ifdef PORT
-serialview:
-	$(SERIALDUMP) -b115200 $(USBDEVPREFIX) $(PORT) | $(CONTIKI)/tools/timestamp
-
-login:
-	$(SERIALDUMP) -b115200 $(USBDEVPREFIX) $(PORT)
-else
-serialview:
-	$(SERIALDUMP) -b115200 $(USBDEVPREFIX)$(firstword $(MOTES)) | $(CONTIKI)/tools/timestamp
-
-login:
-	$(SERIALDUMP) -b115200 $(USBDEVPREFIX)$(firstword $(MOTES))
 endif
